fix: (List) remove the extra margin to prevent unexpectedly style change

--- a/src/components/list/list.less
+++ b/src/components/list/list.less
@@ -22,7 +22,6 @@
     margin-bottom: -1px;
   }
   &-default {
-    margin: 12px 0;
     .adm-list-body {
       border-top: var(--border-top);
       border-bottom: var(--border-bottom);
